<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activity_register"
    android:gravity="center"
    android:layout_gravity="center"
    android:padding="40dp"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left"
        tools:ignore="RtlHardcoded,UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/String_5"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/String_6"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:minHeight="48dp"
            android:inputType="textPersonName"
            tools:ignore="LabelFor"
            android:hint="@string/String_11" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/String_7"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints=""
            android:hint="@string/String_12"
            android:minHeight="48dp"
            tools:ignore="ExtraText,TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/String_8"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:autofillHints=""
            android:hint="@string/String_13"
            android:minHeight="48dp"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/String_9"
            android:layout_gravity="center"
            android:onClick="onClickRegister"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:text="@string/String_10"
            android:onClick="onClickRegister"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
</LinearLayout>