<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/background_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="80dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#29FFFFFF"
            android:text="@string/String_6"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="#4DFFFFFF"
            android:ems="10"
            android:hint="@string/String_11"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#1E1D1D"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#29FFFFFF"
            android:text="@string/String_7"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="#4DFFFFFF"
            android:ems="10"
            android:hint="@string/String_12"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#1E1D1D"
            tools:ignore="ExtraText,TextFields" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/String_2"
            android:onClick="onClickReg"/>

        <Button
            android:id="@+id/bLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/String_1"
            android:onClick="onClickAcc"/>

    </LinearLayout>
</LinearLayout>